<resources>
    <string name="app_name">MatchMate</string>
    <string name="profile_matches">Profile Matches</string>
    <string name="profile_image">Profile Image</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="match_score">Match Score</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="match_mate">Match Mate</string>
    <string name="preferences">Preferences</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="looking_for">Looking For?</string>
    <string name="your_age">Your Age?</string>
    <string name="save">Save</string>
    <string name="country">Country</string>
    <string name="preference">Preference</string>
</resources>