<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    android:background="#FAFAFA"
    app:strokeColor="#1C274C"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/profile_image"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4" />

        <ImageView
            android:id="@+id/iv_match_score"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/match_score"
            android:src="@drawable/ic_match_score"
            app:layout_constraintBottom_toBottomOf="@id/iv_profile_image"
            app:layout_constraintEnd_toEndOf="@id/iv_profile_image"
            app:layout_constraintTop_toBottomOf="@id/iv_profile_image" />

        <TextView
            android:id="@+id/tv_match_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_match_score"
            app:layout_constraintEnd_toEndOf="@id/iv_match_score"
            app:layout_constraintStart_toStartOf="@id/iv_match_score"
            app:layout_constraintTop_toTopOf="@id/iv_match_score"
            tools:text="60" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_profile_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="John Doe" />

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:text="27" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_age"
            tools:text="Mumbai" />

        <ImageView
            android:id="@+id/iv_reject"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/reject"
            android:src="@drawable/ic_reject"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_accept"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_city" />

        <ImageView
            android:id="@+id/iv_accept"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/accept"
            android:src="@drawable/ic_accept"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_reject"
            app:layout_constraintTop_toBottomOf="@id/tv_city" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>